gccida/g0/expand_asm_operands
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2064:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2065:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2066:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2073:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2099:5: error: expected ';' after expression
tree clobbersa; // [rsp+10h] [rbp-150h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2099:6: error: use of undeclared identifier 'clobbersa'; did you mean 'clobbers'?
tree clobbersa; // [rsp+10h] [rbp-150h] 
     ^~~~~~~~~
     clobbers
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2054:6: note: 'clobbers' declared here
tree clobbers, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2100:5: error: expected ';' after expression
tree inputsa; // [rsp+18h] [rbp-148h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2100:6: error: use of undeclared identifier 'inputsa'; did you mean 'inputs'?
tree inputsa; // [rsp+18h] [rbp-148h] 
     ^~~~~~~
     inputs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2053:6: note: 'inputs' declared here
tree inputs, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2101:5: error: expected ';' after expression
tree outputsa; // [rsp+20h] [rbp-140h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2101:6: error: use of undeclared identifier 'outputsa'; did you mean 'outputs'?
tree outputsa; // [rsp+20h] [rbp-140h] 
     ^~~~~~~~
     outputs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2052:6: note: 'outputs' declared here
tree outputs, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2102:5: error: expected ';' after expression
tree stringa; // [rsp+28h] [rbp-138h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2102:6: error: use of undeclared identifier 'stringa'; did you mean 'string'?
tree stringa; // [rsp+28h] [rbp-138h] 
     ^~~~~~~
     string
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2051:6: note: 'string' declared here
tree string, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2118:5: error: expected ';' after expression
tree type; // [rsp+78h] [rbp-E8h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2118:6: error: use of undeclared identifier 'type'
tree type; // [rsp+78h] [rbp-E8h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2119:5: error: expected ';' after expression
tree val; // [rsp+80h] [rbp-E0h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2119:6: error: use of undeclared identifier 'val'; did you mean 'vol'?
tree val; // [rsp+80h] [rbp-E0h] 
     ^~~
     vol
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2055:5: note: 'vol' declared here
int vol, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2120:5: error: expected ';' after expression
tree type_0; // [rsp+88h] [rbp-D8h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2120:6: error: use of undeclared identifier 'type_0'
tree type_0; // [rsp+88h] [rbp-D8h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/stmt.c:2121:5: error: expected ';' after expression
tree val_0; // [rsp+90h] [rbp-D0h] 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_asm_operands/src/obj/stmt.o] Error 1
